# Ground-Software

./: .dockerignore  .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  compose.yml  compose_fill.yml  compose_local.yml  compose_prod.yml  delete_influxdb.sh  package-lock.json  setup.sh
.github/workflows/: bazel.yml  build.yml  fill_station_action.yml  fill_station_build_and_push.yml  fill_station_test.yml  fill_telem_proxy_build.yml  ground_server_build_and_push.yml  rocket_telem_proxy_build.yml  telemetry_proxy_build.yml  websocket_proxy_build.yml
actuators/: BUILD
client/: BUILD  fill_station_client.cc
fill/: BUILD  Dockerfile  GithubDockerfile  fill_station.cc  setup_mock_wiringpi.sh  telemetry_reader.cc  telemetry_reader.h  telemetry_reader_test.cc
fill/actuators/: BUILD  actuator.h  ball_valve.cc  ball_valve.h  ignitor.cc  ignitor.h  qd.cc  qd.h  sol_valve.cc  sol_valve.h
fill/sensors/: BUILD  (+9 more)
go-proxies/: go.mod  go.sum  proxy_build.sh
ground/: BUILD  ground_station.cc
ground-server/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
logs/: latest
platform/: BUILD
protos/: BUILD  command.proto  command_grpc.proto  telemetry.proto
sensors/: BUILD  ducer.h  ptd.cc  ptd.h  sensor.h
server/: BUILD  ground_station_server.cc
services/: fill.service  ground.service
telemetry-proxy/: Dockerfile  go.mod  go.sum  proxy_build.sh  telemetry_proxy.go
toolchain/: BUILD  cc_linux_toolchain_config.bzl  cc_macos_toolchain_config.bzl  cc_toolchain_config.bzl
toolchain_osx/: BUILD  cc_toolchain_config.bzl
(+117 files in other folders)
